Fix blog articles being partially hidden behind navbar

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -493,6 +493,8 @@ section {
 
 .articles {
     text-align: center;
+    //  Move top of articles below navbar
+    margin-top: 80px;
 }
 
 .articles a {
